# telecom-analytics-aws-lab

./: .gitignore  README.md  sprint-0.md  sprint-1.md  sprint-2.md
dashboards/: phase0-kpis.json
docs/: architecture.md  aws-ecs-application-runtime.md  aws-rds-console-setup.md  aws-rds-schema-initialization.md  phase0-architecture.md  phase0-runbook.md  phase1-runbook.md  phase2-runbook.md  project-charter.md  terraform-runbook.md
infra/aws/db-init/: Dockerfile  entrypoint.sh  validate.sql
infra/compose/: README.md  compose.redpanda-console.yaml  compose.test.yaml  compose.yaml
infra/compose/phase0/: compose.test.yaml  compose.yaml
infra/db/: 01-schema.sql  02-monitoring-user.sql
infra/grafana/dashboards/: telecom-kpis.json
infra/k8s/base/: kustomization.yaml
infra/k8s/validation/: smoke-test-job.yaml
infra/prometheus/: prometheus.yaml
infra/redpanda/: bootstrap.yaml
services/ingest/: .env.example  README.md  package-lock.json  package.json
services/ingest/src/: db.js  (+4 more)
services/pmgen/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/pmgen/docs/: design.md  metrics.md
services/pmgen/src/pmgen/: __init__.py  admin_server.py  cli.py  config.py  generator.py  kafka.py  metrics.py  models.py  runtime.py  scenarios.py  sqs.py  transport.py
terraform/: README.md  ecr.tf  ecs.tf  endpoints.tf  iam.tf  locals.tf  logs.tf  network.tf  outputs.tf  providers.tf  rds.tf  secrets.tf  security_groups.tf  sqs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/smoke/: Dockerfile  pyproject.toml
tests/smoke/src/: smoke-test.py
(+58 files in other folders)
