[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmgen"
version = "0.1.0"
description = "Synthetic PM event generator for cloud-native telecom analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<0.29",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "typer>=0.12,<0.16",
  "aiokafka>=0.10,<1.0",
  "prometheus-client>=0.25.0,<1.0",
]

[project.scripts]
pmgen = "pmgen.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
