[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-smoke-tests"
version = "0.1.0"
description = "Smoke tests for cloud-native telecom analytics"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2,<4.0",
  "requests>=2.32,<3.0",
]
